--- a/appsettings.json
+++ b/appsettings.json
@@ -9,7 +9,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "cpqconnectionstring": "Data Source=127.0.0.1,1433;Initial Catalog=CPQ;Persist Security Info=True;User ID=sa;Password=Conga@062023;TrustServerCertificate=True;MultipleActiveResultSets=True",
+    "cpqconnectionstring": "Data Source=127.0.0.1,1433;Initial Catalog=CPQ;Persist Security Info=True;User ID=sa;Password=******;TrustServerCertificate=True;MultipleActiveResultSets=True",
     "Redis": "127.0.0.1:6379"
   },
   "Kestrel": {
